- Added stunning for pirate skills and fixed a few that were not setup properly. - Fixed damaging of mobs by Corkscrew Blow - Maps now load dynamically
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1582 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -417,6 +417,10 @@
 					RelativePath=".\src\ChannelServer\InitializeChannel.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\src\ChannelServer\MapDataProvider.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="ServerToServer"
@@ -725,6 +729,10 @@
 				>
 				<File
 					RelativePath=".\src\ChannelServer\InitializeChannel.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\MapDataProvider.h"
 					>
 				</File>
 			</Filter>
