Updated mysql.lua.sample for MCDB(thanks Jonathan/Bri :3)
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1586 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/conf/mysql.lua.sample
+++ b/conf/mysql.lua.sample
@@ -9,5 +9,5 @@ chardb_port = 3306;
 datadb_host = "localhost";
 datadb_username = "root";
 datadb_password = "";
-datadb_database = "vedb";
+datadb_database = "mcdb";
 datadb_port = 3306;
