First draft of ItemDataProvider
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1587 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -418,6 +418,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\ItemDataProvider.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\MapDataProvider.cpp"
 					>
 				</File>
@@ -729,6 +733,10 @@
 				>
 				<File
 					RelativePath=".\src\ChannelServer\InitializeChannel.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\ItemDataProvider.h"
 					>
 				</File>
 				<File
