Moved loading of shops and such to ShopDataProvider
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1590 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -298,10 +298,6 @@
 					>
 				</File>
 				<File
-					RelativePath=".\src\ChannelServer\Shops.cpp"
-					>
-				</File>
-				<File
 					RelativePath=".\src\ChannelServer\SkillMacros.cpp"
 					>
 				</File>
@@ -423,6 +419,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\MapDataProvider.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\ShopDataProvider.cpp"
 					>
 				</File>
 			</Filter>
@@ -608,10 +608,6 @@
 					>
 				</File>
 				<File
-					RelativePath=".\src\ChannelServer\Shops.h"
-					>
-				</File>
-				<File
 					RelativePath=".\src\ChannelServer\SkillMacros.h"
 					>
 				</File>
@@ -741,6 +737,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\MapDataProvider.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\ShopDataProvider.h"
 					>
 				</File>
 			</Filter>
