Moved drops loading and storage to DropDataProvider
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1594 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -410,6 +410,10 @@
 				Name="DataBaseLoading"
 				>
 				<File
+					RelativePath=".\src\ChannelServer\DropDataProvider.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\InitializeChannel.cpp"
 					>
 				</File>
@@ -727,6 +731,10 @@
 			<Filter
 				Name="DataBaseLoading"
 				>
+				<File
+					RelativePath=".\src\ChannelServer\DropDataProvider.h"
+					>
+				</File>
 				<File
 					RelativePath=".\src\ChannelServer\InitializeChannel.h"
 					>
