- Mob data loading and storage now handled by MobDataProvider - Added functions Mob::getMHP, Mob::getMMP, Mob::isBoss, Mob::canFreeze and Mob::canPoison
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1596 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -426,6 +426,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\MobDataProvider.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\ShopDataProvider.cpp"
 					>
 				</File>
@@ -745,6 +749,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\MapDataProvider.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\MobDataProvider.h"
 					>
 				</File>
 				<File
