Replaced old comment
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1603 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/conf/mysql.lua.sample
+++ b/conf/mysql.lua.sample
@@ -5,7 +5,7 @@ chardb_password = "";
 chardb_database = "maplestory";
 chardb_port = 3306;
 
--- VEDB
+-- MCDB
 datadb_host = "localhost";
 datadb_username = "root";
 datadb_password = "";
