--- a/Common.vcproj
+++ b/Common.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="src/Common;src/Libraries;$(ProgramFiles)/boost/boost_1_36_0/"
+				AdditionalIncludeDirectories="src/Common;src/Libraries;src/Libraries/lua;$(ProgramFiles)/boost/boost_1_36_0/"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;MYSQLPP_NO_DLL"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="0"
@@ -108,7 +108,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="src/Common;src/Libraries;$(ProgramFiles)/boost/boost_1_36_0/"
+				AdditionalIncludeDirectories="src/Common;src/Libraries;src/Libraries/lua;$(ProgramFiles)/boost/boost_1_36_0/"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;MYSQLPP_NO_DLL"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
