Added linker configuration for boost_regex to the ChannelServer project and using statements for regex stuff in ChatHandler.cpp for when we can start using TR1's regular expressions stuff.
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1641 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.cbp
+++ b/ChannelServer.cbp
@@ -29,6 +29,7 @@
 					<Add library="boost_system" />
 					<Add library="boost_filesystem" />
 					<Add library="boost_thread-mt" />
+					<Add library="boost_regex" />
 					<Add library="lua" />
 					<Add library="common" />
 					<Add directory="Debug" />
@@ -56,6 +57,7 @@
 					<Add library="boost_system" />
 					<Add library="boost_filesystem" />
 					<Add library="boost_thread-mt" />
+					<Add library="boost_regex" />
 					<Add library="lua" />
 					<Add library="common" />
 					<Add directory="Release" />
