Altered the linker options in the Codeblocks projects to use the multithread versions of the boost libraries.
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1647 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.cbp
+++ b/ChannelServer.cbp
@@ -26,10 +26,9 @@
 				<Linker>
 					<Add library="mysqlclient" />
 					<Add library="mysqlpp" />
-					<Add library="boost_system" />
-					<Add library="boost_filesystem" />
+					<Add library="boost_system-mt" />
+					<Add library="boost_filesystem-mt" />
 					<Add library="boost_thread-mt" />
-					<Add library="boost_regex" />
 					<Add library="common" />
 					<Add library="lua" />
 					<Add directory="Debug" />
@@ -54,10 +53,9 @@
 				<Linker>
 					<Add library="mysqlclient" />
 					<Add library="mysqlpp" />
-					<Add library="boost_system" />
-					<Add library="boost_filesystem" />
+					<Add library="boost_system-mt" />
+					<Add library="boost_filesystem-mt" />
 					<Add library="boost_thread-mt" />
-					<Add library="boost_regex" />
 					<Add library="common" />
 					<Add library="lua" />
 					<Add directory="Release" />
