- Fix all warnings with debug/release on VC++  - Temporary solutions (?) for fixing stack overflow crashes with Linux support functor definitions
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1677 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/LoginServer.vcproj
+++ b/LoginServer.vcproj
@@ -43,7 +43,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="src/Common;src/Libraries;src/Libraries/lua;$(ProgramFiles)/boost/boost_1_37_0/"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;MYSQLPP_NO_DLL"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;MYSQLPP_NO_DLL;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="3"
@@ -123,7 +123,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories="src/Common;src/Libraries;src/Libraries/lua;$(ProgramFiles)/boost/boost_1_37_0/"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;MYSQLPP_NO_DLL"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;MYSQLPP_NO_DLL;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="2"
