- Patch for fixing regex functionality on Linux by Jonathan
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1704 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.cbp
+++ b/ChannelServer.cbp
@@ -29,6 +29,7 @@
 					<Add library="boost_system-mt" />
 					<Add library="boost_filesystem-mt" />
 					<Add library="boost_thread-mt" />
+					<Add library="boost_regex-mt" />
 					<Add library="common" />
 					<Add library="lua" />
 					<Add directory="Debug" />
@@ -56,6 +57,7 @@
 					<Add library="boost_system-mt" />
 					<Add library="boost_filesystem-mt" />
 					<Add library="boost_thread-mt" />
+					<Add library="boost_regex-mt" />
 					<Add library="common" />
 					<Add library="lua" />
 					<Add directory="Release" />
