Using system mysql library on windows
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1711 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/mysql++.vcproj
+++ b/mysql++.vcproj
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="src/Libraries/mysql"
+				AdditionalIncludeDirectories="C:/Program Files/MySQL/MySQL Server 5.1/include"
 				PreprocessorDefinitions="WIN32;_DEBUG;MYSQLPP_NO_DLL"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
