Fixed release compilation problem caused by previous revision
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1712 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/mysql++.vcproj
+++ b/mysql++.vcproj
@@ -103,7 +103,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="src/Libraries/mysql"
+				AdditionalIncludeDirectories="C:/Program Files/MySQL/MySQL Server 5.1/include"
 				PreprocessorDefinitions="WIN32;NDEBUG;MYSQLPP_NO_DLL"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
