Using $(ProgramFiles) constant instead of "C:/Program Files" static path
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1713 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/Common.vcproj
+++ b/Common.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="C:/Program Files/MySQL/MySQL Server 5.1/include;src/Common;src/Libraries;src/Libraries/lua;$(ProgramFiles)/boost/boost_1_37_0/"
+				AdditionalIncludeDirectories="$(ProgramFiles)/MySQL/MySQL Server 5.1/include;src/Common;src/Libraries;src/Libraries/lua;$(ProgramFiles)/boost/boost_1_37_0/"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;MYSQLPP_NO_DLL;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="0"
@@ -108,7 +108,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="C:/Program Files/MySQL/MySQL Server 5.1/include;src/Common;src/Libraries;src/Libraries/lua;$(ProgramFiles)/boost/boost_1_37_0/"
+				AdditionalIncludeDirectories="$(ProgramFiles)/MySQL/MySQL Server 5.1/include;src/Common;src/Libraries;src/Libraries/lua;$(ProgramFiles)/boost/boost_1_37_0/"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;MYSQLPP_NO_DLL;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
