Fixed compiling for Linux caused by the removal of MYSQLPP_MYSQL_HEADERS_BURIED macro (thanks RedXIII for testing)
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1714 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/LoginServer.cbp
+++ b/LoginServer.cbp
@@ -19,6 +19,7 @@
 					<Add option="-D_DEBUG" />
 					<Add option="-D_CONSOLE" />
 					<Add directory="src/Common" />
+					<Add directory="/usr/include/mysql" />
 				</Compiler>
 				<ResourceCompiler>
 					<Add directory="src/Common" />
@@ -46,6 +47,7 @@
 					<Add option="-DNDEBUG" />
 					<Add option="-D_CONSOLE" />
 					<Add directory="src/Common" />
+					<Add directory="/usr/include/mysql" />
 				</Compiler>
 				<ResourceCompiler>
 					<Add directory="src/Common" />
