Using system MySQL++ library on windows
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1725 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/Common.cbp
+++ b/Common.cbp
@@ -22,6 +22,7 @@
 					<Add option="-D_CONSOLE" />
 					<Add directory="src/Common" />
 					<Add directory="/usr/include/mysql" />
+					<Add directory="/usr/include/mysql++" />
 				</Compiler>
 				<ResourceCompiler>
 					<Add directory="src/Common" />
@@ -42,6 +43,7 @@
 					<Add option="-D_CONSOLE" />
 					<Add directory="src/Common" />
 					<Add directory="/usr/include/mysql" />
+					<Add directory="/usr/include/mysql++" />
 				</Compiler>
 				<ResourceCompiler>
 					<Add directory="src/Common" />
