--- a/WorldServer.vcproj
+++ b/WorldServer.vcproj
@@ -41,8 +41,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="src/Common;src/Libraries;src/Libraries/lua;$(ProgramFiles)/boost/boost_1_37_0/"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;MYSQLPP_NO_DLL;_CRT_SECURE_NO_WARNINGS"
+				AdditionalIncludeDirectories="src/Common;src/Libraries/lua;$(ProgramFiles)/boost/boost_1_37_0/"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="3"
@@ -122,8 +122,8 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="src/Common;src/Libraries;src/Libraries/lua;$(ProgramFiles)/boost/boost_1_37_0/"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;MYSQLPP_NO_DLL;_CRT_SECURE_NO_WARNINGS"
+				AdditionalIncludeDirectories="src/Common;src/Libraries/lua;$(ProgramFiles)/boost/boost_1_37_0/"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="2"
