--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -42,7 +42,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="$(ProgramFiles)/MySQL/MySQL Server 5.1/include;src/Common;C:/MySQL++/include;src/Libraries/lua;$(ProgramFiles)/boost/boost_1_37_0/"
+				AdditionalIncludeDirectories="$(ProgramFiles)/MySQL/MySQL Server 5.1/include;src/Common;C:/MySQL++/include;C:/lua/include;$(ProgramFiles)/boost/boost_1_37_0/"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="0"
@@ -64,9 +64,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib libmysql.lib mysqlpp_d.lib lua.lib common.lib"
+				AdditionalDependencies="ws2_32.lib libmysql.lib mysqlpp_d.lib lua_d.lib common.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="$(ProgramFiles)/MySQL/MySQL Server 5.1/lib/opt;$(ConfigurationName)/Common;$(ConfigurationName)/lua;C:/MySQL++/lib;$(ProgramFiles)/boost/boost_1_37_0/lib"
+				AdditionalLibraryDirectories="$(ProgramFiles)/MySQL/MySQL Server 5.1/lib/opt;$(ConfigurationName)/Common;C:/lua/lib;C:/MySQL++/lib;$(ProgramFiles)/boost/boost_1_37_0/lib"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
 				SubSystem="1"
@@ -121,7 +121,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="$(ProgramFiles)/MySQL/MySQL Server 5.1/include;src/Common;C:/MySQL++/include;src/Libraries/lua;$(ProgramFiles)/boost/boost_1_37_0/"
+				AdditionalIncludeDirectories="$(ProgramFiles)/MySQL/MySQL Server 5.1/include;src/Common;C:/MySQL++/include;C:/lua/include;$(ProgramFiles)/boost/boost_1_37_0/"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -144,7 +144,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="ws2_32.lib libmysql.lib mysqlpp.lib lua.lib common.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="$(ProgramFiles)/MySQL/MySQL Server 5.1/lib/opt;$(ConfigurationName)/Common;$(ConfigurationName)/lua;C:/MySQL++/lib;$(ProgramFiles)/boost/boost_1_37_0/lib"
+				AdditionalLibraryDirectories="$(ProgramFiles)/MySQL/MySQL Server 5.1/lib/opt;$(ConfigurationName)/Common;C:/lua/lib;C:/MySQL++/lib;$(ProgramFiles)/boost/boost_1_37_0/lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
