Added a PrecompiledHeader.h for every project
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1728 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/LoginServer.cbp
+++ b/LoginServer.cbp
@@ -86,6 +86,7 @@
 		<Unit filename="src/LoginServer/PlayerLogin.cpp" />
 		<Unit filename="src/LoginServer/PlayerLogin.h" />
 		<Unit filename="src/LoginServer/PrecompiledHeader.cpp" />
+		<Unit filename="src/LoginServer/PrecompiledHeader.h" />
 		<Unit filename="src/LoginServer/Worlds.cpp" />
 		<Unit filename="src/LoginServer/Worlds.h" />
 		<Unit filename="src/LoginServer/main_login.cpp" />
