--- a/WorldServer.vcproj
+++ b/WorldServer.vcproj
@@ -278,6 +278,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\src\WorldServer\PrecompiledHeader.h"
+				>
+			</File>
 			<Filter
 				Name="Packets"
 				>
