Added precompiled header support for codeblocks
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1730 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.cbp
+++ b/ChannelServer.cbp
@@ -170,7 +170,10 @@
 		<Unit filename="src/ChannelServer/PlayersPacket.cpp" />
 		<Unit filename="src/ChannelServer/PlayersPacket.h" />
 		<Unit filename="src/ChannelServer/PrecompiledHeader.cpp" />
-		<Unit filename="src/ChannelServer/PrecompiledHeader.h" />
+		<Unit filename="src/ChannelServer/PrecompiledHeader.h">
+			<Option compile="1" />
+			<Option weight="0" />
+		</Unit>
 		<Unit filename="src/ChannelServer/Quests.cpp" />
 		<Unit filename="src/ChannelServer/Quests.h" />
 		<Unit filename="src/ChannelServer/QuestsPacket.cpp" />
