--- a/LoginServer.cbp
+++ b/LoginServer.cbp
@@ -86,7 +86,10 @@
 		<Unit filename="src/LoginServer/PlayerLogin.cpp" />
 		<Unit filename="src/LoginServer/PlayerLogin.h" />
 		<Unit filename="src/LoginServer/PrecompiledHeader.cpp" />
-		<Unit filename="src/LoginServer/PrecompiledHeader.h" />
+		<Unit filename="src/LoginServer/PrecompiledHeader.h">
+			<Option compile="1" />
+			<Option weight="0" />
+		</Unit>
 		<Unit filename="src/LoginServer/Worlds.cpp" />
 		<Unit filename="src/LoginServer/Worlds.h" />
 		<Unit filename="src/LoginServer/main_login.cpp" />
