--- a/Common.vcproj
+++ b/Common.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="$(ProgramFiles)/MySQL/MySQL Server 5.1/include;src/Common;C:/MySQL++/include;C:/lua/include;$(ProgramFiles)/boost/boost_1_37_0/"
+				AdditionalIncludeDirectories="$(ProgramFiles)/MySQL/MySQL Server 5.1/include;src/Common;$(SystemDrive)/MySQL++/include;$(SystemDrive)/lua/include;$(ProgramFiles)/boost/boost_1_37_0/"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="0"
