--- a/WorldServer.vcproj
+++ b/WorldServer.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="src/Common;C:/lua/include;$(ProgramFiles)/boost/boost_1_37_0/"
+				AdditionalIncludeDirectories="src/Common;$(SystemDrive)/lua/include;$(ProgramFiles)/boost/boost_1_37_0/"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="0"
@@ -67,7 +67,7 @@
 				AdditionalDependencies="ws2_32.lib lua_d.lib common.lib"
 				OutputFile="$(OutDir)\$(ProjectName).exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="src/Libraries/mysql;src/Libraries/mysql++;$(ConfigurationName)/Common;C:/lua/lib;$(ProgramFiles)/boost/boost_1_37_0/lib"
+				AdditionalLibraryDirectories="src/Libraries/mysql;src/Libraries/mysql++;$(ConfigurationName)/Common;$(SystemDrive)/lua/lib;$(ProgramFiles)/boost/boost_1_37_0/lib"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
 				SubSystem="1"
@@ -122,7 +122,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="src/Common;C:/lua/include;$(ProgramFiles)/boost/boost_1_37_0/"
+				AdditionalIncludeDirectories="src/Common;$(SystemDrive)/lua/include;$(ProgramFiles)/boost/boost_1_37_0/"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -146,7 +146,7 @@
 				AdditionalDependencies="ws2_32.lib lua.lib common.lib"
 				OutputFile="$(OutDir)\$(ProjectName).exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="src/Libraries/mysql;src/Libraries/mysql++;$(ConfigurationName)/Common;C:/lua/lib;$(ProgramFiles)/boost/boost_1_37_0/lib"
+				AdditionalLibraryDirectories="src/Libraries/mysql;src/Libraries/mysql++;$(ConfigurationName)/Common;$(SystemDrive)/lua/lib;$(ProgramFiles)/boost/boost_1_37_0/lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
