--- a/WorldServer.vcproj
+++ b/WorldServer.vcproj
@@ -67,7 +67,7 @@
 				AdditionalDependencies="ws2_32.lib lua_d.lib common.lib"
 				OutputFile="$(OutDir)\$(ProjectName).exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="src/Libraries/mysql;src/Libraries/mysql++;$(ConfigurationName)/Common;$(SystemDrive)/lua/lib;$(ProgramFiles)/boost/boost_1_37_0/lib"
+				AdditionalLibraryDirectories="$(ConfigurationName)/Common;$(SystemDrive)/lua/lib;$(ProgramFiles)/boost/boost_1_37_0/lib"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
 				SubSystem="1"
@@ -146,7 +146,7 @@
 				AdditionalDependencies="ws2_32.lib lua.lib common.lib"
 				OutputFile="$(OutDir)\$(ProjectName).exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="src/Libraries/mysql;src/Libraries/mysql++;$(ConfigurationName)/Common;$(SystemDrive)/lua/lib;$(ProgramFiles)/boost/boost_1_37_0/lib"
+				AdditionalLibraryDirectories="$(ConfigurationName)/Common;$(SystemDrive)/lua/lib;$(ProgramFiles)/boost/boost_1_37_0/lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
