- Moved buff packets from SkillsPacket to BuffsPacket
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1756 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -326,6 +326,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\BuffsPacket.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\DropsPacket.cpp"
 					>
 				</File>
@@ -645,6 +649,10 @@
 				>
 				<File
 					RelativePath=".\src\ChannelServer\BuddyListPacket.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\BuffsPacket.h"
 					>
 				</File>
 				<File
