Added perfect MapleTV functionality:  - Can use the basic 3 items with all options  - Will queue up multiple messengers like global  - Displays to all maps that have MapleTVs - even if you move the NPCs to odd maps  - Displays properly when switching maps to a MapleTV map
Thanks to Diamondo25 for his help with the packets 
Thanks to Bri for using the stupid thing to get a packet

git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1763 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -258,6 +258,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\MapleTVs.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\Maps.cpp"
 					>
 				</File>
@@ -577,6 +581,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\Map.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\MapleTVs.h"
 					>
 				</File>
 				<File
