- Adding MapleTVs.cpp/.h to ChannelServer.cbp  - Thanks to Diamondo25
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1767 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.cbp
+++ b/ChannelServer.cbp
@@ -118,6 +118,8 @@
 		<Unit filename="src/ChannelServer/Map.h" />
 		<Unit filename="src/ChannelServer/MapDataProvider.cpp" />
 		<Unit filename="src/ChannelServer/MapDataProvider.h" />
+		<Unit filename="src/ChannelServer/MapleTVs.cpp" />
+		<Unit filename="src/ChannelServer/MapleTVs.h" />
 		<Unit filename="src/ChannelServer/MapPacket.cpp" />
 		<Unit filename="src/ChannelServer/MapPacket.h" />
 		<Unit filename="src/ChannelServer/Maps.cpp" />
