Added ranking support thanks Jonathan for the original code, Bui for information and me for optimization.
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1772 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/LoginServer.vcproj
+++ b/LoginServer.vcproj
@@ -228,6 +228,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\LoginServer\RankingCalculator.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\LoginServer\Worlds.cpp"
 					>
 				</File>
@@ -323,6 +327,10 @@
 				</File>
 				<File
 					RelativePath=".\src\LoginServer\PlayerLogin.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\LoginServer\RankingCalculator.h"
 					>
 				</File>
 				<File
