Added RankingCalculator to code::blocks (pointed out by Jonathan)
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1774 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/LoginServer.cbp
+++ b/LoginServer.cbp
@@ -90,6 +90,8 @@
 			<Option compile="1" />
 			<Option weight="0" />
 		</Unit>
+		<Unit filename="src/LoginServer/RankingCalculator.cpp" />
+		<Unit filename="src/LoginServer/RankingCalculator.h" />
 		<Unit filename="src/LoginServer/Worlds.cpp" />
 		<Unit filename="src/LoginServer/Worlds.h" />
 		<Unit filename="src/LoginServer/main_login.cpp" />
