--- a/conf/worlds.lua.sample
+++ b/conf/worlds.lua.sample
@@ -1,33 +1,41 @@
 -- World name
 world0_name = "Scania";
--- World channels
+
+-- World channels (minimum 1, maximum 20)
 world0_channels = 1;
--- World ID (also affects the icon of the world)
+
+-- World ID (affects the icon of the world; minimum 0, maximum 9)
 world0_id = 0;
+
 -- World Ribbon
 --  0 = None
 --  1 = E
 --  2 = N
 --  3 = H
 world0_ribbon = 0;
+
 -- Server rates
 world0_exprate = 1;
 world0_questexprate = 1;
 world0_mesorate = 1;
 world0_droprate = 1;
--- Max AP you'll allow a user to put into their core stats?
+
+-- Max AP a user is allowed to put into their core stats (minimum 4, maximum 32767)
 world0_maxstats = 999;
--- How many times do you want your users to level up at once?
---  1 is global-like/default
+
+-- How many times should your users level up at once, if EXP allows?
 --  0 is disabled leveling
 -- -1 is as many times as the EXP allows
 world0_max_multi_level = 1;
+
 -- What port should the world server listen on?
 -- Channels will run on port world port + channel number
 -- i.e. channel one will run on 7101 and channel 2 will run on 7102
 world0_port = 7100;
--- Event message
+
+-- Event message (displays while logging in)
 world0_event_msg = "";
+
 -- Scrolling header
 world0_scrolling_header = "Welcome to Vana";
 
