Initial instancing patch  - Way too many Lua exports to list  - Fairly robust instancing engine  - Example instances of Hak rides
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1850 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -466,6 +466,10 @@
 				Name="Scripting"
 				>
 				<File
+					RelativePath=".\src\ChannelServer\LuaInstance.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\LuaNPC.cpp"
 					>
 				</File>
@@ -519,6 +523,18 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\PlayerSummons.cpp"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Instance"
+				>
+				<File
+					RelativePath=".\src\ChannelServer\Instance.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\Instances.cpp"
 					>
 				</File>
 			</Filter>
@@ -796,6 +812,10 @@
 				Name="Scripting"
 				>
 				<File
+					RelativePath=".\src\ChannelServer\LuaInstance.h"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\LuaNPC.h"
 					>
 				</File>
@@ -849,6 +869,18 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\PlayerSummons.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Instance"
+				>
+				<File
+					RelativePath=".\src\ChannelServer\Instance.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\Instances.h"
 					>
 				</File>
 			</Filter>
