Updated FindBoost.cmake to the latest one found on the cmake cvs
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1853 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ project(Vana)
 #### Finding libraries
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
-set(Boost_ADDITIONAL_VERSIONS 1.38.0 1.37.0)
-find_package(Boost REQUIRED COMPONENTS filesystem regex system thread)
+set(Boost_USE_MULTITHREADED ON)
+find_package(Boost 1.37.0 REQUIRED COMPONENTS filesystem regex system thread)
 
 find_package(MySQL REQUIRED)
 include_directories(${MYSQL_INCLUDE_DIR})
