- Moved a bunch of enumeration definitions to a constants file  - Added enumerations with skills for all classes  - Substituted a very significant portion of the "magic numbers" that represented skills
I think I got the cmake file right... maybe.

git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1866 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -884,6 +884,22 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="Constants"
+				>
+				<File
+					RelativePath=".\src\ChannelServer\ChatHandlerConstants.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\GameConstants.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\InstanceMessageConstants.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
