Renamed HelperFunctions to GameLogicUtilities and moved it out to its own file
git-svn-id: https://dev.chiasoft.net:8443/svn/svn_vana/trunk@1868 23f3cdc0-e6d1-42be-a0c1-51f4125517bb

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -900,6 +900,14 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="Utilities"
+				>
+				<File
+					RelativePath=".\src\ChannelServer\GameLogicUtilities.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
