- Fix Dark Sight messing with speed even if it's level 20 bug  - Created framework for transferring buffs to new channel  - Buffs now properly display to others when you switch channels and behave as they should instead of lasting forever
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1913 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -214,6 +214,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\ChannelServer\BuffHolder.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\ChannelServer\Buffs.cpp"
 					>
 				</File>
@@ -553,6 +557,10 @@
 				>
 				<File
 					RelativePath=".\src\ChannelServer\BuddyListHandler.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\BuffHolder.h"
 					>
 				</File>
 				<File
