Very large party revision  - Changed the system so parties are stored and updated locally  - Added a few Lua exports  - Tied parties in with instances so parties now send messages if associated with an instance  - Proper CLIENT-SIDED party buffing (not even Odin has this)  - Credit to zOmgnO1 for starting me off with his basic patch  - Credit to Ramon for helping me out
As usual, lemme know if you find any bugs

git-svn-id: svn://70.113.44.214/VanaMirror/trunk@1933 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/WorldServer.vcproj
+++ b/WorldServer.vcproj
@@ -220,6 +220,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\src\WorldServer\Parties.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\src\WorldServer\Players.cpp"
 					>
 				</File>
@@ -315,6 +319,10 @@
 				</File>
 				<File
 					RelativePath=".\src\WorldServer\Channels.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\WorldServer\Parties.h"
 					>
 				</File>
 				<File
