--- a/src/WorldServer/CMakeLists.txt
+++ b/src/WorldServer/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCES
 	LoginServerConnectHandler.h
 	LoginServerConnectPacket.h
 	LoginServerConnectPlayer.h
+	Parties.h
 	PartyHandler.h
 	PartyPacket.h
 	Players.h
@@ -18,6 +19,7 @@ set(SOURCES
 	LoginServerConnectPacket.cpp
 	LoginServerConnectPlayer.cpp
 	main_world.cpp
+	Parties.cpp
 	PartyHandler.cpp
 	PartyPacket.cpp
 	Players.cpp
