--- a/src/LoginServer/CMakeLists.txt
+++ b/src/LoginServer/CMakeLists.txt
@@ -34,6 +34,7 @@ target_link_libraries(LoginServer
 	${MYSQL_LIBRARIES}
 	${MYSQL++_LIBRARIES}
 	${LUA_LIBRARIES}
+	${CRYPTO++_LIBRARIES}
 	${Boost_FILESYSTEM_LIBRARY}
 	${Boost_SYSTEM_LIBRARY}
 	${Boost_THREAD_LIBRARY}
