- Added generalized Variables class to ChannelServer  - Created PlayerVariables class  - Changed player variables to use PlayerVariables class  - Changed instance variables to use Variables class
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@2018 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/ChannelServer.vcproj
+++ b/ChannelServer.vcproj
@@ -325,6 +325,10 @@
 					RelativePath=".\src\ChannelServer\Trades.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\src\ChannelServer\Variables.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="Packets"
@@ -529,6 +533,10 @@
 					RelativePath=".\src\ChannelServer\PlayerSummons.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\src\ChannelServer\PlayerVariables.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="Instance"
@@ -673,6 +681,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\Trades.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\Variables.h"
 					>
 				</File>
 			</Filter>
@@ -877,6 +889,10 @@
 				</File>
 				<File
 					RelativePath=".\src\ChannelServer\PlayerSummons.h"
+					>
+				</File>
+				<File
+					RelativePath=".\src\ChannelServer\PlayerVariables.h"
 					>
 				</File>
 			</Filter>
