- Updated CMake lists to have variable stuff
git-svn-id: svn://70.113.44.214/VanaMirror/trunk@2019 09c1253f-3d09-8e40-9719-4320e56601b5

--- a/src/ChannelServer/CMakeLists.txt
+++ b/src/ChannelServer/CMakeLists.txt
@@ -60,6 +60,7 @@ set(SOURCES
 	PlayersPacket.h
 	PlayerStorage.h
 	PlayerSummons.h
+	PlayerVariables.h
 	PrecompiledHeader.h
 	Quests.h
 	QuestsPacket.h
@@ -76,6 +77,7 @@ set(SOURCES
 	Trade.h
 	Trades.h
 	TradesPacket.h
+	Variables.h
 	WorldServerConnectHandler.h
 	WorldServerConnectPacket.h
 	WorldServerConnectPlayer.h
@@ -136,6 +138,7 @@ set(SOURCES
 	PlayersPacket.cpp
 	PlayerStorage.cpp
 	PlayerSummons.cpp
+	PlayerVariables.cpp
 	PrecompiledHeader.cpp
 	Quests.cpp
 	QuestsPacket.cpp
@@ -152,6 +155,7 @@ set(SOURCES
 	Trade.cpp
 	Trades.cpp
 	TradesPacket.cpp
+	Variables.cpp
 	WorldServerConnectHandler.cpp
 	WorldServerConnectPacket.cpp
 	WorldServerConnectPlayer.cpp
